# GTMAgent

./: .gitignore  README.md
backend/: .env-example  MANIFEST.in  Makefile  README.md  chat_graph.py  chat_manager.py  main.py  pyproject.toml
backend/services/: __init__.py  chatgraph_service.py  websearch_service.py
backend/tests/: conftest.py  test_chat_graph.py  test_main.py  test_websearch_service.py
backend/utils/: chat_utils.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/Chatbot/: ChatInput.tsx  ChatMessage.tsx  Chatbot.tsx
frontend/src/utils/: api.ts
