[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "startup-bakery"
version = "0.1.0"
description = "Startup Bakery Backend API"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.35.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "langchain-core>=0.3.69",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "logs*",
    "chat_history*",
    "tests*",
    ".*",
    "*.log",
    "*.pyc",
    "__pycache__"
]
